--- a/module-1/sml-1-conceptual-overview.html
+++ b/module-1/sml-1-conceptual-overview.html
@@ -607,66 +607,35 @@
 <h2>A much less-biased algorithm (GAM/spline)</h2>
 
 <img data-src="sml-1-conceptual-overview_files/figure-revealjs/unnamed-chunk-4-1.png" width="960" class="r-stretch quarto-figure-center"></section>
-<section id="slightly-different-data-right-pane" class="slide level2">
-<h2>Slightly different data (right pane)</h2>
+<section id="slightly-different-data-bottom" class="slide level2">
+<h2>Slightly different data (bottom)</h2>
 <div class="pull-left">
-<div class="quarto-figure quarto-figure-center">
-<figure>
 <p><img data-src="img/bias-variance-data-1.png" width="900"></p>
-<figcaption>Bias Variance Data 1</figcaption>
-</figure>
-</div>
 </div>
 <div class="pull-right">
-<div class="quarto-figure quarto-figure-center">
-<figure>
 <p><img data-src="img/bias-variance-data-2.png" width="900"></p>
-<figcaption>Bias Variance Data 2</figcaption>
-</figure>
-</div>
 </div>
 </section>
 <section id="still-strong-bias-but-low-variance" class="slide level2">
 <h2>Still strong bias, but low variance</h2>
 <div class="pull-left">
-<div class="quarto-figure quarto-figure-center">
-<figure>
 <p><img data-src="img/bias-variance-data-3.png" width="900"></p>
-<figcaption>Bias Variance Data 3</figcaption>
-</figure>
-</div>
 </div>
 <div class="pull-right">
-<div class="quarto-figure quarto-figure-center">
-<figure>
 <p><img data-src="img/bias-variance-data-4.png" width="900"></p>
-<figcaption>Bias Variance Data 4</figcaption>
-</figure>
-</div>
 </div>
 </section>
 <section id="low-bias-but-very-high-variance" class="slide level2">
 <h2>Low bias, but very high variance</h2>
 <div class="pull-left">
-<div class="quarto-figure quarto-figure-center">
-<figure>
 <p><img data-src="img/bias-variance-data-5.png" width="900"></p>
-<figcaption>Bias Variance Data 5</figcaption>
-</figure>
-</div>
 </div>
 <div class="pull-right">
-<div class="quarto-figure quarto-figure-center">
-<figure>
 <p><img data-src="img/bias-variance-data-6.png" width="900"></p>
-<figcaption>Bias Variance Data 6</figcaption>
-</figure>
-</div>
 </div>
 </section>
 <section id="the-bias-variance-tradeoff" class="slide level2">
 <h2>The bias-variance tradeoff</h2>
-<p>.pull-left[</p>
 <section id="bias" class="pull-left">
 <h4>Bias</h4>
 <ul>
