--- a/module-1/sml-1-conceptual-overview.html
+++ b/module-1/sml-1-conceptual-overview.html
@@ -592,8 +592,7 @@
 </ul></li>
 <li>An important way to achieve good performance with test data is to balance between the inherent <em>bias</em> in your algorithm and the <em>variance</em> in the predictions of your algorithm; this is referred to as the <strong>bias-variance</strong> trade-off of <em>all</em> models</li>
 </ul>
-<p>.footnote[ [1] not always/often used, for reasons we’ll discuss later</p>
-<p>]</p>
+<p>[1] not always/often used, for reasons we’ll discuss later</p>
 </section>
 <section id="illustrating-the-bias-variance-tradeoff" class="slide level2">
 <h2>Illustrating the bias-variance tradeoff</h2>
@@ -636,24 +635,20 @@
 </section>
 <section id="the-bias-variance-tradeoff" class="slide level2">
 <h2>The bias-variance tradeoff</h2>
-<section id="bias" class="pull-left">
-<h4>Bias</h4>
+<h4 id="bias">Bias</h4>
 <ul>
 <li><em>Definition</em>: Difference between our known codes/outcomes and our predicted codes/outcomes; difference between <span class="math inline">\(y\)</span> and <span class="math inline">\(\hat{y}\)</span></li>
 <li>How (in)correct our models’ (algorithms’) predictions are</li>
 <li>Models with high bias can fail to capture important relationships—they can be <em>under-fit</em> to our data</li>
 <li>In short, how well our model reflects the patterns in the data</li>
 </ul>
-</section>
-<section id="variance" class="pull-right">
-<h4>Variance</h4>
+<h4 id="variance">Variance</h4>
 <ul>
 <li><em>Definition</em>: Using a different sample of data, the difference in <span class="math inline">\(\hat{y}\)</span> values</li>
 <li>How sensitive our predictions are to the specific sample on which we trained the model</li>
 <li>Models with high variance can fail to predict different data well—they can be <em>over-fit</em> to our data</li>
 <li>In short, how stable the predictions of our model are</li>
 </ul>
-</section>
 ####
 <center>
 Regardless of model, we often wish to balance between bias and variance—to balance between under- and over-fitting a model to our data
@@ -669,9 +664,9 @@ Regardless of model, we often wish to balance between bias and variance—to bal
 <li>Carrying out a careful process of qualitative coding (and the establishment of validity and interrater reliability) of students’ written constructed responses</li>
 <li>Training a supervised ML algorithm in advance of being able to <strong>scale up</strong> their coding to a larger number of responses</li>
 </ul>
-</section></section>
-<section id="discussion-2" class="title-slide slide level1 center">
-<h1>Discussion 2</h1>
+</section>
+<section id="discussion-2" class="slide level2">
+<h2>Discussion 2</h2>
 <div class="panel-tabset">
 <ul id="tabset-2" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-2-1">Reflecting</a></li><li><a href="#tabset-2-2">Applying</a></li></ul>
 <div class="tab-content">
@@ -700,8 +695,7 @@ Regardless of model, we often wish to balance between bias and variance—to bal
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</section>
-
+</section></section>
 <section id="modules-overview" class="title-slide slide level1 center">
 <h1>Modules Overview</h1>
 <div class="panel-tabset">
