--- a/module-3/sml-3-conceptual-overview.html
+++ b/module-3/sml-3-conceptual-overview.html
@@ -625,7 +625,7 @@ Prediction 0 1
 <section id="feature-engineering-part-a" class="slide level2">
 <h2>Feature Engineering (Part A)</h2>
 <div class="panel-tabset">
-<ul id="tabset-3" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-3-1">Why?</a></li><li><a href="#tabset-3-2">Why (again)?</a></li><li><a href="#tabset-3-3">How?</a></li></ul>
+<ul id="tabset-3" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-3-1">Why?</a></li><li><a href="#tabset-3-2">Why (again)?</a></li><li><a href="#tabset-3-3">Other Options</a></li><li><a href="#tabset-3-4">Time Stamps</a></li><li><a href="#tabset-3-5">How?</a></li></ul>
 <div class="tab-content">
 <div id="tabset-3-1">
 <p>Let’s consider a very simple data set, <code>d</code>, one with <em>time_point</em> data, <code>var_a</code>, for a single student. <em>How do we add this to our model?</em> Focus on the time element; how could you account for this?</p>
@@ -656,8 +656,69 @@ Prediction 0 1
 3 janyia              3    35</code></pre>
 </div>
 </div>
+<aside class="notes">
+<p>You can emphasize here that the interactions data is emblematic of much learning analyitcs data. You may want to open the data here to view it together, getting a sense of its size and contents in terms of rows (observations) and columns (variables).</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+<p><em>What are some other ideas?</em></p>
+<aside class="notes">
+<p>This can be a very fun discussion - lean into weird ideas! Writing these out on a whiteboard may help to facilitate sharing and discussion.</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </div>
 <div id="tabset-3-3">
+<p><strong>A few (other) options</strong></p>
+<ul>
+<li>Raw data points</li>
+<li>Their mean</li>
+<li>Their maximum</li>
+<li>Their variability (standard deviation)</li>
+<li>Their linear slope</li>
+<li>Their quadratic slope</li>
+</ul>
+<aside class="notes">
+<p>You can lean into other ideas - writing other ideas (e.g., do moon phases matter for certain RQs!) on the whiteboard.</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+<p><strong>Each of these may derive from a single <em>variable</em> but may offer predictive utility as distinct <em>features</em></strong></p>
+</div>
+<div id="tabset-3-4">
+<p>Here’s a time stamp:</p>
+<div class="cell">
+<div class="cell-output cell-output-stdout">
+<pre><code>[1] "2024-11-21 16:36:32 EST"</code></pre>
+</div>
+</div>
+<p><strong>How could this variable be used as a predictor variable?</strong></p>
+</div>
+<div id="tabset-3-5">
 <ul>
 <li>We can do all of these things <strong>manually</strong></li>
 <li>But, there are also helpful “<strong>{recipes}</strong>” functions to do this</li>
